plugins {
    id 'java-library'  
    id 'application'
    id 'distribution'
}

repositories {
    mavenCentral()
    maven { url "https://jitpack.io" }
}

dependencies {
    implementation 'com.github.micycle1:processing-core-4:4.0b6c'
}

version = '0.0.1-' + new Date().format("yyyyMMdd'T'HHmmss'Z'", TimeZone.getTimeZone("UTC")) 

sourceSets {
    main {
        java {
            srcDirs = [
                'ewbik',
            ]
        }
        resources {
            srcDirs = ['ewbik']
        }
    }
}

distributions {
    main {
        contents {
            from ('Humanoid_Holding_Item.json') {                
                rename 'Humanoid_Holding_Item.json', 'bin/Humanoid_Holding_Item.json'
            }
            from ('kusudama_vert.glsl') {                
                rename 'kusudama_vert.glsl', 'bin/kusudama_vert.glsl'
            }
            from ('kusudama.glsl') {                
                rename 'kusudama.glsl', 'bin/kusudama.glsl'
            }
            from ('LICENSE') {                
                rename 'LICENSE', 'bin/LICENSE'
            }
        }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(13)
    }    
}
